--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "A CLI tool meant to replace and automate your everyday web browser.",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "postinstall": "playwright install chromium"
+  },
   "keywords": [],
   "author": "sebastiancarlos",
   "license": "MIT",
