--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.2",
   "description": "A CLI tool meant to replace and automate your everyday web browser.",
   "type": "module",
+  "bin": {
+    "beachpatrol": "./beachpatrol.js",
+    "beachmsg": "./beachmsg.js"
+  },
   "scripts": {
     "postinstall": "playwright install chromium"
   },
