chore: Add a helper 'postintall' script which prompts the user to install browsers for the first time.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "beachmsg": "./beachmsg.js"
   },
   "scripts": {
-    "postinstall": "playwright install chromium"
+    "postinstall": "node ./.internal-scripts/postinstall.js"
   },
   "keywords": [],
   "author": "sebastiancarlos",
