--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.3",
   "description": "A CLI tool meant to replace and automate your everyday web browser.",
   "type": "module",
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
   "bin": {
     "beachpatrol": "./beachpatrol.js",
     "beachmsg": "./beachmsg.js"
