Use "patchright" for improved stealth. Update Playwright.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "url": "git+https://github.com/sebastiancarlos/beachpatrol.git"
   },
   "dependencies": {
-    "@playwright/test": "^1.44.1",
+    "@playwright/test": "^1.52.0",
+    "patchright": "^1.52.4",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
