--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build And Test (Linux, macOS, Windows)
+name: Build And Test (Linux, macOS, Windows) x (Chromium, Firefox)
 
 on:
   push:
@@ -11,13 +11,14 @@ on:
 
 jobs:
   build-and-test:
-    name: Build and Test on ${{ matrix.os }}
+    name: Build and Test on ${{ matrix.os }} with ${{ matrix.browser }}
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        browser: [chromium, firefox]
 
     steps:
       - name: Checkout code
@@ -42,7 +43,9 @@ jobs:
 
       - name: Install Playwright browsers (and their OS dependencies)
         # It should not re-download if browsers exist.
-        run: npx playwright install --with-deps chromium
+        run: npx playwright install --with-deps ${{ matrix.browser }}
+        env:
+          TEST_BROWSER: ${{ matrix.browser }}
 
       - name: Run tests
         run: npm test
