Add speedup of apt-get on linux CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,16 @@ jobs:
             ~\AppData\Local\ms-playwright
           key: playwright-${{ matrix.os }}-${{ matrix.browser }}-${{ hashFiles('**/package-lock.json') }}
 
+      - name: Linux Installation Speedup
+        # - Skip installing package docs {makes the man-db trigger much faster) 
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo tee /etc/dpkg/dpkg.cfg.d/01_nodoc > /dev/null << 'EOF'
+          path-exclude /usr/share/doc/*
+          path-exclude /usr/share/man/*
+          path-exclude /usr/share/info/*
+          EOF
+
       - name: Build Project
         run: npm ci
 
